# ub-core

./: .gitignore  README.MD  project.toml  pyproject.toml  requirements.txt  sample-config.env  setup.py  version.py
.github/workflows/: tag_release.yml
ub_core/: __init__.py  __main__.py  config.py  task_manager.py  version.py
ub_core/core/: __init__.py  client.py  conversation.py  db.py  logger.py  storage.py
ub_core/core/decorators/: __init__.py  add_cmd.py  make_async.py  on_callback_query.py  on_edited_message.py  on_message.py  register_task.py  register_tasks.py  register_worker.py
ub_core/core/handlers/: __init__.py  callback_query.py  chosen_inline_result.py  command.py  conversation.py  dispatcher.py  filters.py  handler.py  inline_query.py  unified_message_handler.py
ub_core/core/logging/: __init__.py  cmd_usage_logger.py  logging_config.py  telegram_log_record_handler.py
ub_core/core/methods/: __init__.py  channel_loggers.py  send_message.py
ub_core/core/types/: __init__.py  callback_query.py  extra_properties.py  inline_result.py  message.py
ub_core/default_plugins/: __init__.py  cancel.py  cmdinfo.py  exec.py  help.py  loader.py  logs.py  mode.py  repo.py  restart.py  shell.py  stop.py  update.py
ub_core/plugins/: loader.py  logs.py  restart.py  shell.py  update.py
ub_core/utils/: __init__.py  aiohttp_tools.py  downloader.py  helpers.py  media_helper.py  shell.py
